ci: fix CI with deps

--- a/.github/workflows/render.yml
+++ b/.github/workflows/render.yml
@@ -24,6 +24,7 @@ jobs:
         with:
           packages: any::knitr
             any::rmarkdown
+            any::readr
 
       - name: Render home slides
         uses: quarto-dev/quarto-actions/render@v2
