--- a/.github/workflows/render.yml
+++ b/.github/workflows/render.yml
@@ -25,6 +25,8 @@ jobs:
           packages: any::knitr
             any::rmarkdown
             any::readr
+            any::DBI
+            ani::RSQLite
 
       - name: Render home slides
         uses: quarto-dev/quarto-actions/render@v2
