--- a/.github/workflows/render.yml
+++ b/.github/workflows/render.yml
@@ -27,7 +27,7 @@ jobs:
             any::rmarkdown
             any::readr
             any::DBI
-            ani::RSQLite
+            any::RSQLite
 
       - name: Render home slides
         uses: quarto-dev/quarto-actions/render@v2
