--- a/.github/workflows/render.yml
+++ b/.github/workflows/render.yml
@@ -34,6 +34,11 @@ jobs:
         with:
           path: index.qmd
 
+      - name: Render home slides
+        uses: quarto-dev/quarto-actions/render@v2
+        with:
+          path: select/index.qmd
+
       - name: Create CNAME to _slides folder
         run: echo 'sql.breant.art' > _slides/CNAME
 
