--- a/.github/workflows/render.yml
+++ b/.github/workflows/render.yml
@@ -39,10 +39,15 @@ jobs:
         with:
           path: select/index.qmd
 
-      - name: Render home slides
+      - name: Render filter slides
         uses: quarto-dev/quarto-actions/render@v2
         with:
           path: filter/index.qmd
+
+      - name: Render aggregate slides
+        uses: quarto-dev/quarto-actions/render@v2
+        with:
+          path: aggregate/index.qmd
 
       - name: Create CNAME to _slides folder
         run: echo 'sql.breant.art' > _slides/CNAME
