--- a/.github/workflows/render.yml
+++ b/.github/workflows/render.yml
@@ -60,6 +60,11 @@ jobs:
         with:
           path: join/index.qmd
 
+      - name: Render tidyverse slides
+        uses: quarto-dev/quarto-actions/render@v2
+        with:
+          path: tidyverse/index.qmd
+
       - name: Create CNAME to _slides folder
         run: echo 'sql.breant.art' > _slides/CNAME
 
