--- a/.github/workflows/render.yml
+++ b/.github/workflows/render.yml
@@ -29,6 +29,7 @@ jobs:
             any::DBI
             any::RSQLite
             any::dplyr
+            any::dbplyr
 
       - name: Render home slides
         uses: quarto-dev/quarto-actions/render@v2
