--- a/.github/workflows/render.yml
+++ b/.github/workflows/render.yml
@@ -71,8 +71,8 @@ jobs:
         with:
           path: examen/index.qmd
 
-      - name: Create CNAME to _slides folder
-        run: echo 'sql.breant.art' > _slides/CNAME
+      # - name: Create CNAME to _slides folder
+      #   run: echo 'sql.breant.art' > _slides/CNAME
 
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
